fixed white space and refactored home page

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,9 +1,3 @@
-.type {
-    color: white;
-    padding-top: 25px;
-    font-size: 75px;
-}
-
 .Home h2 {
     color: white;
     text-align: left;
